<resources>
    <string name="app_name">Volei</string>
    <string name="textview">Assistente de Volei</string>
    <string name="time_a">Time A</string>
    <string name="time_b">Time B</string>
    <string name="jogar">Jogar</string>
    <string name="voltar">Voltar</string>
    <string name="resultado_das_ultimas_5_partidas">Resultado das Ultimas 5 partidas</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_lista_partidas">Lista de Partidas</string>
</resources>